# brave-core

./: DEPS  Jenkinsfile  package-lock.json  package.json
.storybook/: locale.ts
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_browser_main_parts_mac.h  brave_browser_main_parts_mac.mm  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_drm_tab_helper.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
common/: url_constants.cc  url_constants.h
components/brave_federated_learning/: BUILD.gn  DEPS  brave_federated_learning_service.cc  brave_federated_learning_service.h  brave_operational_profiling.cc  brave_operational_profiling.h  brave_operational_profiling_features.cc  brave_operational_profiling_features.h
components/brave_rewards/common/: BUILD.gn  brave_rewards.mojom
ios/browser/api/networking/: BUILD.gn  brave_certificate_model.h  brave_certificate_model.mm  headers.gni  networking_api.h
ios/browser/api/networking/common/: brave_certificate_enums.h
ios/browser/api/networking/models/: BraveCertificatePublicKeyInfo.h  BraveCertificatePublicKeyInfo.mm
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-resources-tools-optimize_webui.py.patch  chrome-browser-ui-android-toolbar-BUILD.gn.patch  chrome-browser-ui-startup-startup_browser_creator_impl.cc.patch  chrome-browser-webauthn-chrome_authenticator_request_delegate.cc.patch  chrome-installer-util-shell_util.cc.patch  chrome-utility-services.cc.patch  components-content_settings-core-common-content_settings.cc.patch  components-os_crypt-keychain_password_mac.mm.patch  content-browser-BUILD.gn.patch  content-browser-browser_main_loop.cc.patch  content-browser-compositor-DEPS.patch  content-browser-compositor-viz_process_transport_factory.cc.patch  content-browser-compositor-viz_process_transport_factory.h.patch  content-browser-devtools-protocol-network_handler.cc.patch  content-browser-gpu-fallback.md.patch  content-browser-gpu-gpu_data_manager_impl.cc.patch  content-browser-gpu-gpu_data_manager_impl.h.patch  content-browser-gpu-gpu_data_manager_impl_private.cc.patch  content-browser-gpu-gpu_data_manager_impl_private.h.patch  content-browser-gpu-gpu_process_host.cc.patch  (+14 more)
test/: BUILD.gn
(+274 files in other folders)
