import("//mojo/public/tools/bindings/mojom.gni")

source_set("features") {
  sources = [
    "features.cc",
    "features.h",
  ]

  deps = [ "//base" ]
}

source_set("common") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
    "url_constants.cc",
    "url_constants.h",
  ]

  deps = [
    ":features",
    ":mojom",
  ]
}

mojom("mojom") {
  sources = [ "brave_rewards.mojom" ]
  deps = [ "//mojo/public/mojom/base" ]
}
