# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/ios/rules.gni")
import("//ios/build/config.gni")

source_set("networking") {
  configs += [ "//build/config/compiler:enable_arc" ]

  cflags = [
    "-DBRAVE_CORE",
    "-fobjc-weak",
    "-fobjc-abi-version=2",
    "-fobjc-legacy-dispatch",
    "-Wno-objc-property-synthesis",
    "-Wno-sign-compare",
  ]

  ldflags = [ "-Wl,-no_compact_unwind,-rpath,/usr/lib/swift,-rpath,@executable_path/../Frameworks" ]

  sources = [
    "brave_certificate_model.h",
    "brave_certificate_model.mm",
  ]

  deps = [
    "common",
    "//base",
    "//net",
    "//third_party/abseil-cpp:absl",
    "//third_party/boringssl",
  ]

  frameworks = [
    "Foundation.framework",
    "Security.framework",
  ]
}
