# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

brave_core_networking_public_headers = [
    "//brave/ios/browser/api/networking/networking_api.h",
    "//brave/ios/browser/api/networking/brave_certificate_model.h",
    "//brave/ios/browser/api/networking/common/brave_certificate_enums.h"
]
